Changed some stuff.

--- a/README
+++ b/README
@@ -4,3 +4,5 @@ You are free to join the project @ irc://irc.x10hosting.com:6667/#x10bot.
 Please see the website for more information: http://irc.x10hosting.com/imadeabot
 =======
 An IRC bot for the x10hosting IRC. Uses the Jerk IRC bot.
+=======
+An IRC bot for the x10hosting IRC written completely in Node.js
