--- a/README
+++ b/README
@@ -7,4 +7,6 @@ An IRC bot for the x10hosting IRC. Uses the Jerk IRC bot.
 =======
 An IRC bot for the x10hosting IRC written completely in Node.js
 
+Also contains a games bot which can be started from within Hex.
+
 supervisor --watch README hex.js
