--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-x10Bot demonstration
+x10Bot is the ULTIMATE x10hosting IRC bot. The staff of x10hosting are coming together to build a bot that EVERYONE will love. You are free to join the project @ irc://irc.x10hosting.com:6667/#x10bot.
