--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-x10Bot is the ULTIMATE x10hosting IRC bot. The staff of x10hosting are coming together to build a bot that EVERYONE will love. You are free to join the project @ irc://irc.x10hosting.com:6667/#x10bot. See the website for more information: http://irc.x10hosting.com/imadeabot
+x10Bot is the ULTIMATE x10hosting IRC bot.
+The staff of x10hosting are coming together to build a bot that EVERYONE will love.
+You are free to join the project @ irc://irc.x10hosting.com:6667/#x10bot.
+Please see the website for more information: http://irc.x10hosting.com/imadeabot
